# MMME

TP_edo/: TP_edo.xlsx
TP_edo/fluide_lj/: fluide++  fluide.cpp  makefile  matrice.cpp
TP_edo/fluide_lj/CMake/: CMakeLists.txt  fluide.cpp  matrice.hpp
TP_edo/kepler_1part/: kepler++  kepler.cpp  makefile
TP_edo/kepler_1part/CMake/: CMakeLists.txt  kepler.cpp  matrice.hpp
TP_edo/kepler_1part/results dt = 0.1/: SE energie  SE position  SEP energie  SEP position
TP_edo/lj_1D/: lj++  lj.cpp  makefile
TP_edo/lj_1D/CMake/: CMakeLists.txt  lj.cpp  matrice.cpp
TP_edo/lj_1D/results dt = 0,005/: EE energie  EE position  SE energie  SE position  Verlet energie  Verlet position
TP_edo/lj_1D/results dt = 0,05/: EE energie  EE position  SE energie  SE position  Verlet energie  Verlet position  results
TP_edo/lj_1D/results dt = 0.0005/: EE energie  EE position
TP_edo/lj_1D/results dt = 0.001/: EE energie  EE position  SE energie  SE position  results
TP_edo/lj_1D/results dt = 0.01/: EE energie  EE position  SE energie  SE position  Verlet energie  Verlet position  results
TP_edo/lj_1D/results dt = 0.1/: EE energie  EE position  SE energie  SE position  Verlet energie  Verlet position  results
TP_edo/pendule_1D/: makefile  pendule++  pendule.cpp
TP_edo/pendule_1D/CMake/: CMakeLists.txt  pendule.cpp
TP_edo/pendule_1D/results (0;1.8)/: Lobatto energie  Verlet energie  Verlet position
TP_edo/pendule_1D/results (0;2.2)/: Lobatto energie  Lobatto position  Verlet energie  Verlet position
